--- a/index.html
+++ b/index.html
@@ -4,29 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+      <style>
+      .search-box {
+        padding: 8px;
+        font: inherit;
+        resize: none;
+      }
+    </style>
     <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-    <p class="output">Selected color: <span>-</span></p> 
-    <div class="color-palette"></div>
+    <!-- <p class="output">Selected color: <span>-</span></p> 
+    <div class="color-palette"></div> -->
+ <input type="text" class="search-box" autocomplete="off" />
+    <ul class="student-list"></ul>
 
-  <!-- <div id="c-1">
-      <form>
-        <input type="text" name="firstValue" />
-        <input type="text" name="secondValue" />
-        <button type="submit">Calc</button>
-      </form>
-      <p class="output"></p>
-    </div> -->
-
-    <!-- <div id="c-2">
-      <form>
-        <input type="text" name="firstValue" />
-        <input type="text" name="secondValue" />
-        <button type="submit">Calc</button>
-      </form>
-      <p class="output"></p>
-    </div>  -->
-    <script src="./js/palette.js" type="module"> </script>
+  <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.21/lodash.min.js"
+      integrity="sha512-WFN04846sdKMIP5LKNphMaWzU7YpMyCU245etK3g/2ARYbPK9Ub18eG+ljU96qKRCWh+quCY7yefSmlkQw1ANQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
+<script src="./js/search.js" type="module"></script>
+    <!-- <script src="./js/palette.js" type="module"> </script> -->
 </body>
 </html>
