--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     ></script>
-<script src="./js/search.js" type="module"></script>
+
+    <script src="./js/training.js" type="module"></script>
+<!-- <script src="./js/search.js" type="module"></script> -->
     <!-- <script src="./js/palette.js" type="module"> </script> -->
 </body>
 </html>
